Small GenericEntity optimization - remove instanceof checks in getXxx methods.
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@1372738 13f79535-47bb-0310-9956-ffa450edef68