@@ -619,14 +619,8 @@ public class GenericEntity extends Observable implements Map<String, Object>, Lo
     }
 
     public String getString(String name) {
-        // might be nice to add some ClassCastException handling... and auto conversion? hmmm...
         Object object = get(name);
-        if (object == null) return null;
-        if (object instanceof java.lang.String) {
-            return (String) object;
-        } else {
-            return object.toString();
-        }
+        return object == null ? null : object.toString();
     }
 
     public java.sql.Timestamp getTimestamp(String name) {
@@ -656,22 +650,28 @@ public class GenericEntity extends Observable implements Map<String, Object>, Lo
     public Double getDouble(String name) {
         // this "hack" is needed for now until the Double/BigDecimal issues are all resolved
         Object value = get(name);
-        if (value instanceof BigDecimal) {
-            return Double.valueOf(((BigDecimal) value).doubleValue());
-        } else {
-            return (Double) value;
+        if (value != null) {
+            try {
+                BigDecimal numValue = (BigDecimal) value;
+                return new Double(numValue.doubleValue());
+            } catch (ClassCastException e) {
+            }
         }
+        return (Double) value;
     }
 
     public BigDecimal getBigDecimal(String name) {
         // this "hack" is needed for now until the Double/BigDecimal issues are all resolved
         // NOTE: for things to generally work properly BigDecimal should really be used as the java-type in the field type def XML files
         Object value = get(name);
-        if (value instanceof Double) {
-            return BigDecimal.valueOf(((Double) value).doubleValue());
-        } else {
-            return (BigDecimal) value;
+        if (value != null) {
+            try {
+                Double numValue = (Double) value;
+                return new BigDecimal(numValue.doubleValue());
+            } catch (ClassCastException e) {
+            }
         }
+        return (BigDecimal) value;
     }
 
     @SuppressWarnings("deprecation")
